Fixed horizontal scrollbar

--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -19,6 +19,7 @@ h6 {
 body {
   font-family: var(--default-font-family);
   background: #fcf9f4;
+  overflow-x: hidden;
 }
 
 nav {
